# WAVtoBMP

./: CMakeLists.txt  README.md
src/: BMPdata.cpp  BMPdata.h  furieTransform.cpp  furieTransform.h  main.cpp  wavFile.cpp  wavFile.h  wavHeader.h
