cmake_minimum_required(VERSION 3.0)
project(wav_to_bmp)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(source_dir "src")
set(fftw_include_path "/usr/local/include")
set(fftw_lib_path "/usr/local/lib")
set(fftw_lib_name "libfftw3.a")
include_directories(${fftw_include_path})
link_directories(${fftw_lib_path})
file(GLOB_RECURSE sources "${source_dir}/*.cpp")
add_executable(main ${sources})
target_link_libraries(main ${fftw_lib_name})
